--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -54,6 +54,7 @@ mark {
     padding-bottom: 10px;
     display: flex;
     flex-direction: column;
+
     &.-small {
         p {
             font-size: 13px;
@@ -79,13 +80,24 @@ mark {
     }
 
     .questions-block {
+        height: 100%;
         .quesion-text {
             font-size: 20px;
             margin-bottom: 15px;
         }
 
         .text-hint {
-            height: 24px;
+            min-height: 24px;
+            font-style: italic;
+            font-size: 16px;
+        }
+
+        .buttons-bar {
+            display: flex;
+            justify-content: flex-end;
+            .btn:not(:last-child) {
+                margin-right: 10px;
+            }
         }
 
         .questions-list {
@@ -102,6 +114,11 @@ mark {
                 margin-bottom: 15px;
                 cursor: pointer;
                 border-radius: 5px;
+
+                &.-success {
+                    border-color: #55c11d;
+                    color: #55c11d;
+                }
             }
         }
     }
