--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -41,20 +41,24 @@ mark {
     }
 
     .card-number {
+        position: absolute;
+        bottom: 0;
+        right: 0;
         margin-top: auto;
     }
     .heading {
         font-size: 32px;
     }
 }
-
-.note-card {
-    box-shadow: 0px 3px 7px 0px grey;
+.-shadow {
     padding-top: 10px;
     padding-bottom: 10px;
+    box-shadow: 0 3px 7px 0 grey;
+}
+.note-card {
     display: flex;
     flex-direction: column;
-
+    position: relative;
     &.-small {
         p {
             font-size: 13px;
@@ -78,9 +82,32 @@ mark {
             margin-bottom: 15px;
         }
     }
+    .questions-card {
+        height: 100%;
+        padding-top: 0;
 
+        .note-item-wrap {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            .card-number {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+
+            }
+        }
+    }
     .questions-block {
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+
+        .absolute-wap {
+            position: absolute;
+            width: 100%;
+        }
         .quesion-text {
             font-size: 20px;
             margin-bottom: 15px;
@@ -91,14 +118,26 @@ mark {
             font-style: italic;
             font-size: 16px;
         }
-
-        .buttons-bar {
+        .questions-footer {
+            margin-top: auto;
+            margin-bottom: 12px;
             display: flex;
-            justify-content: flex-end;
-            .btn:not(:last-child) {
-                margin-right: 10px;
+            .page-counter {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+            }
+            .buttons-bar {
+                display: flex;
+                justify-content: flex-end;
+                margin-left: auto;
+                .btn:not(:last-child) {
+                    margin-right: 10px;
+                }
             }
         }
+
 
         .questions-list {
             display: flex;
@@ -106,7 +145,7 @@ mark {
             justify-content: center;
             align-items: center;
             margin-top: 10px;
-            .question-item {
+            .btn.question-item {
                 font-size: 18px;
                 width: 100%;
                 padding: 10px;
@@ -114,7 +153,7 @@ mark {
                 margin-bottom: 15px;
                 cursor: pointer;
                 border-radius: 5px;
-
+                text-align: left;
                 &.-success {
                     border-color: #55c11d;
                     color: #55c11d;
